2014-03-23  Daniel Colascione  <dancol@dancol.org>

	* xfns.c (create_frame_xic): Pass XNStatusAttributes to XCreateIC
	only if xic_style calls for it.  This change allows Emacs to work
	with ibus.  Also, don't leak resources if create_frame_xic fails.

2014-03-23  Daniel Colascione  <dancol@dancol.org>

	* term.c (init_tty): Rearrange condition for clarity; print
	appropriate diagnostic.

2014-03-23  Daniel Colascione  <dancol@dancol.org>

	* process.c (DATAGRAM_CONN_P): Don't underflow datagram_address
	array.  (ASAN caught.)

2014-03-22  Glenn Morris  <rgm@gnu.org>

	* callproc.c (init_callproc): In etc, look for NEWS rather than GNU.

2014-03-22  Daniel Colascione  <dancol@dancol.org>

	* process.c (conv_sockaddr_to_lisp): When extracting the string
	names of AF_LOCAL sockets, stop before reading uninitialized memory.

2014-03-21  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	Fix regression introduced by patch for Bug#10500.
	* xterm.c (x_draw_image_relief): Respect Vtool_bar_button_margin.
	* w32term.c (x_draw_image_relief): Likewise.

2014-03-21  Martin Rudalics  <rudalics@gmx.at>

	* w32fns.c (w32_wnd_proc): For WM_WINDOWPOSCHANGING don't
	constrain frame size in SW_SHOWMAXIMIZED case so we can truly
	maximize a frame for odd default fonts.

2014-03-21  Glenn Morris  <rgm@gnu.org>

	* minibuf.c (history-length): Increase default from 30 to 100.

2014-03-21  Daniel Colascione  <dancol@dancol.org>

	* xterm.c (x_bitmap_icon): Stop reading the icon bitmap from disk
	every time we switch to minibuffer.

	* alloc.c (lisp_align_malloc, allocate_string_data)
	(allocate_vectorlike): Allow mmap allocation of lisp objects.
	(pointers_fit_in_lispobj_p,mmap_lisp_allowed_p): New functions.

2014-03-21  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (Fw32_shell_execute) [!CYGWIN]: Use ShellExecuteEx, to
	support more "verbs".

2014-03-21  Daniel Colascione  <dancol@dancol.org>

	Always prohibit dumping a dumped Emacs.

	* emacs.c (might_dump): New variable.